--- a/University/home.html
+++ b/University/home.html
@@ -48,8 +48,11 @@
       .logo {
         display: flex;
         align-items: center;
+       
       }
-
+       .logo img{
+        width: 650px;
+       }
       /* 👇 YEH MAIN CONTROL HAI LOGO KA */
       .logo img {
         height: 50px; /* bas isko change karo */
@@ -104,7 +107,7 @@
     <nav class="navbar">
       <!-- LOGO (Reusable) -->
       <div class="logo">
-        <img src="logo.png" alt="Logo" />
+        <img src=".//image/Global_Institute_Simple_Logo-removebg-preview.png" alt="Logo" />
       </div>
 
       <!-- Menu -->
