add conent section in home page

--- a/University/home.html
+++ b/University/home.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Navbar</title>
+     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
     <style>
       * {
         margin: 0;
@@ -11,7 +12,170 @@
         box-sizing: border-box;
         font-family: sans-serif;
       }
+       .right-contact-main-container {
+            position: fixed;
+            transition: 2s;
+            right: 0;
+            top: 30%;
+            display: flex;
+            flex-direction: column;
+            z-index: 1000;
 
+        }
+
+        /* Common Button Style */
+        .contact-side-button {
+            width: 250px;
+            /* Full width fix */
+            height: 60px;
+            display: flex;
+            align-items: center;
+            color: white;
+            cursor: pointer;
+            transition: 0.4s;
+            position: relative;
+            right: -190px;
+            /* 250 - 60 */
+            padding-left: 20px;
+        }
+
+        .contact-side-button i {
+            min-width: 40px;
+            text-align: center;
+        }
+
+
+        /* Arrow */
+        .contact-arrow-button {
+            background: black;
+            border-radius: 20px 0 0 0;
+        }
+
+        /* CONTACT US (Yellow) */
+        .contact-us-button {
+            background: #f4b731;
+            height: 160px;
+            border-radius: 0;
+            position: relative;
+        }
+
+        .contact-us-button span {
+            writing-mode: vertical-rl;
+            transform: rotate(180deg);
+            font-weight: bold;
+        }
+
+        /* Messenger */
+        .contact-messenger-button {
+            background: #1877f2;
+        }
+
+        /* Phone */
+        .contact-phone-button {
+            background: #25d366;
+            border-radius: 0 0 0 20px;
+        }
+
+        /* Hover Width Expand for Messenger & Phone */
+        .contact-messenger-button:hover,
+        .contact-phone-button:hover {
+            width: 170px;
+            transform: translateX(-100px);
+            /* 250 - 60 = 190 */
+            justify-content: flex-start;
+            padding-left: 20px;
+        }
+
+        .contact-messenger-button:hover::after {
+            content: "Chat With Us";
+            margin-left: 15px;
+            font-weight: bold;
+        }
+
+        .contact-phone-button:hover::after {
+            content: "Call Us Now";
+            margin-left: 15px;
+            font-weight: bold;
+        }
+
+        /* ================= CONTACT FORM ================= */
+
+        .contact-form-popup-container {
+            position: fixed;
+            top: 0;
+            right: -100%;
+            width: 400px;
+            height: 100vh;
+           
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            transition: 0.4s;
+            z-index: 999;
+        }
+
+        .contact-form-popup-container.active {
+            right: 29px;
+
+        }
+
+        .contact-form-box {
+            width: 90%;
+            background: rgb(192, 192, 192);
+            padding: 25px;
+            border-radius: 15px;
+        }
+
+        .contact-form-header {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            margin-bottom: 20px;
+        }
+
+        .contact-form-header h2 {
+            color: #1e73be;
+        }
+
+        .contact-form-close {
+            font-size: 22px;
+            cursor: pointer;
+        }
+
+        /* Form Fields */
+        .contact-form-box input,
+        .contact-form-box textarea {
+            width: 100%;
+            padding: 12px;
+            margin-bottom: 15px;
+            border-radius: 25px;
+            border: 1px solid #ddd;
+            outline: none;
+        }
+
+        .contact-form-box textarea {
+            height: 100px;
+            border-radius: 15px;
+            resize: none;
+        }
+
+        .contact-form-box button {
+            width: 100%;
+            padding: 15px;
+            background: #23227c;
+
+            border: none;
+            border-radius: 30px;
+            cursor: pointer;
+            font-size: 16px;
+        }
+
+        /* Responsive */
+        @media(max-width:500px) {
+            .contact-form-popup-container {
+                width: 100%;
+            }
+        }
       /* TOP BAR */
       .topbar {
         background: #1e2a78;
@@ -118,5 +282,93 @@
         <a href="#">Apply Now</a>
       </div>
     </nav>
+    <div class="right-contact-main-container" id="contactBar">
+
+
+        <div class="contact-side-button contact-arrow-button" id="toggleArrow">
+            <i class="fa-solid fa-arrow-right"></i>
+        </div>
+
+        <div class="d" id="d">
+            <div class="contact-side-button contact-us-button" id="contactHoverButton">
+                <span>Contact Us</span>
+            </div>
+
+            <div class="contact-side-button contact-messenger-button">
+                <i class="fa-brands fa-facebook-messenger"></i>
+            </div>
+
+            <div class="contact-side-button contact-phone-button">
+                <i class="fa-solid fa-phone"></i>
+            </div>
+        </div>
+
+    </div>
+
+    <!-- ================= CONTACT FORM ================= -->
+
+    <div class="contact-form-popup-container" id="contactForm">
+
+        <div class="contact-form-box">
+
+            <div class="contact-form-header">
+                <h2>Contact Form</h2>
+                <span class="contact-form-close" id="closeForm">&times;</span>
+            </div>
+
+            <input type="text" placeholder="Name*" required>
+            <input type="tel" placeholder="Phone*" required>
+            <input type="email" placeholder="Email*" required>
+            <textarea placeholder="Message"></textarea>
+            <button>Submit</button>
+
+        </div>
+
+    </div>
   </body>
+  <script>
+   const contactHoverButton = document.getElementById("contactHoverButton");
+        const contactForm = document.getElementById("contactForm");
+        const closeForm = document.getElementById("closeForm");
+
+        contactHoverButton.addEventListener("mouseenter", () => {
+            contactForm.classList.add("active");
+        });
+
+        contactForm.addEventListener("mouseleave", () => {
+            contactForm.classList.remove("active");
+        });
+
+        closeForm.addEventListener("click", () => {
+            contactForm.classList.remove("active");
+        });
+        document.addEventListener("DOMContentLoaded", function () {
+
+            const toggleArrow = document.getElementById("toggleArrow");
+            const contactBar = document.getElementById("contactBar");
+
+            toggleArrow.addEventListener("click", function () {
+
+                contactBar.classList.toggle("expanded");
+
+                const icon = toggleArrow.querySelector("i");
+
+                if (contactBar.classList.contains("expanded")) {
+                    icon.classList.remove("fa-arrow-right");
+                    icon.classList.add("fa-arrow-left");
+                    d.style.display = "none";
+                    contactBar.style.top="50%";
+                } else {
+                    icon.classList.remove("fa-arrow-left");
+                    icon.classList.add("fa-arrow-right");
+                    d.style.display = "block";
+                   contactBar.style.top="30%";
+                }
+
+            });
+
+        });
+
+    </script>
+
 </html>
