--- a/University/home.html
+++ b/University/home.html
@@ -496,7 +496,7 @@
         <div class="box box4"></div>
       </div>
 
-      <!-- RIGHT IMAGE -->
+      RIGHT IMAGE
       <div class="hero-right">
         <img id="slider-img" src="./images/image/image 1.jfif" />
       </div>
