loding bar ko respoincev kiya

--- a/University/home.html
+++ b/University/home.html
@@ -313,9 +313,13 @@
         gap: 0;
         position: absolute;
         bottom: 5px;
-        right: 700px;
+        right: 852px;
       }
-
+@media (min-width: 400px) and (max-width: 1400px)  {
+     .shapes {
+      right: 52%;
+    } 
+   }
       /* BOX BASE */
       .box {
         width: 60px;
@@ -496,7 +500,7 @@
         <div class="box box4"></div>
       </div>
 
-      RIGHT IMAGE
+      <!-- RIGHT IMAGE -->
       <div class="hero-right">
         <img id="slider-img" src="./images/image/image 1.jfif" />
       </div>
