shapes ko respoincive bnaya

--- a/University/home.html
+++ b/University/home.html
@@ -313,12 +313,17 @@
         gap: 0;
         position: absolute;
         bottom: 5px;
-        right: 852px;
+      
       }
-@media (min-width: 400px) and (max-width: 1400px)  {
+@media (min-width: 400px)  {
      .shapes {
       right: 52%;
     } 
+    @media  (min-width: 900px) {
+      .shapes {
+        right: 56%;
+      }
+    }
    }
       /* BOX BASE */
       .box {
