navbar file update

--- a/University/home.html
+++ b/University/home.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Navbar</title>
+    
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
@@ -455,11 +456,11 @@
 
       <!-- Menu -->
       <ul class="menu">
-        <li><a href="#">Home</a></li>
-        <li><a href="#">About </a></li>
-        <li><a href="#">Courses </a></li>
-        <li><a href="#">Contact</a></li>
-        <li><a href="#">Student</a></li>
+        <li><a href="./home.html">Home</a></li>
+        <li><a href="./Pages/About.html">About </a></li>
+        <li><a href="./Pages/Courses.html">Courses </a></li>
+        <li><a href="./Pages/Conatct.html">Contact</a></li>
+        <li><a href="./Pages/Student.html">Student</a></li>
       </ul>
 
       <!-- Button -->
@@ -496,7 +497,7 @@
         <div class="box box4"></div>
       </div>
 
-      RIGHT IMAGE
+      <!-- RIGHT IMAGE -->
       <div class="hero-right">
         <img id="slider-img" src="./images/image/image 1.jfif" />
       </div>
