--- a/University/Pages/Student.html
+++ b/University/Pages/Student.html
@@ -35,16 +35,16 @@
     <nav class="navbar">
       <!-- LOGO (Reusable) -->
       <div class="logo">
-        <img src="./images/image/logo image.png" alt="Logo" />
+        <img src="../images/image/logo image.png" alt="Logo" />
       </div>
 
       <!-- Menu -->
       <ul class="menu">
-        <li><a href="#">Home</a></li>
-        <li><a href="#">About </a></li>
-        <li><a href="#">Courses </a></li>
-        <li><a href="#">Contact</a></li>
-        <li><a href="#">Student</a></li>
+        <li><a href="../home.html">Home</a></li>
+        <li><a href="./about.html">About </a></li>
+        <li><a href="./courses.html">Courses </a></li>
+        <li><a href="./contact.html">Contact</a></li>
+        <li><a href="./student.html">Student</a></li>
       </ul>
 
       <!-- Button -->
