navbar file update

--- a/University/Pages/Student.html
+++ b/University/Pages/Student.html
@@ -49,7 +49,7 @@
 
       <!-- Button -->
       <div class="apply-btn">
-        <a href="#">Apply Now</a>
+        <a href="./Apply.html">Apply Now</a>
       </div>
     </nav>
 
