--- a/University/home.html
+++ b/University/home.html
@@ -474,7 +474,7 @@
 
       <!-- Button -->
       <div class="apply-btn">
-        <a href="#">Apply Now</a>
+        <a href="./Pages/Apply.html">Apply Now</a>
       </div>
     </nav>
 
