--- a/University/Pages/Conatct.html
+++ b/University/Pages/Conatct.html
@@ -36,16 +36,16 @@
 
       <!-- Menu -->
       <ul class="menu">
-        <li><a href="#">Home</a></li>
-        <li><a href="#">About </a></li>
-        <li><a href="#">Courses </a></li>
-        <li><a href="#">Contact</a></li>
-        <li><a href="#">Student</a></li>
+        <li><a href="../home.html">Home</a></li>
+        <li><a href="./About.html">About </a></li>
+        <li><a href="./Courses.html">Courses </a></li>
+        <li><a href="./contact.html">Contact</a></li>
+        <li><a href="./student.html">Student</a></li>
       </ul>
 
       <!-- Button -->
       <div class="apply-btn">
-        <a href="#">Apply Now</a>
+        <a href="./Apply.html">Apply Now</a>
       </div>
     </nav>
 
