--- a/University/home.html
+++ b/University/home.html
@@ -507,7 +507,7 @@
 
       <!-- RIGHT IMAGE -->
       <div class="hero-right">
-        <img id="slider-img" src="./images/image/image 1.jfif" />
+        <img id="slider-img" src="./images/image/image 1.jfif" alt="Slider Image" >
       </div>
     </section>
 
