--- a/University/Pages/Student.html
+++ b/University/Pages/Student.html
@@ -40,11 +40,11 @@
 
       <!-- Menu -->
       <ul class="menu">
-        <li><a href="../home.html">Home</a></li>
-        <li><a href="./about.html">About </a></li>
-        <li><a href="./courses.html">Courses </a></li>
-        <li><a href="./Conatct.html">Contact</a></li>
-        <li><a href="./student.html">Student</a></li>
+        <li><a href="#">Home</a></li>
+        <li><a href="#">About </a></li>
+        <li><a href="#">Courses </a></li>
+        <li><a href="#">Contact</a></li>
+        <li><a href="#">Student</a></li>
       </ul>
 
       <!-- Button -->
