Footer page uplode

--- a/University/Pages/Footer.html
+++ b/University/Pages/Footer.html
@@ -1,11 +1,84 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Footer Design</title>
+
+<!-- FontAwesome -->
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+
+<link rel="stylesheet" href="Footer.css">
 </head>
 <body>
-    
+
+<footer class="footer">
+    <div class="footer-overlay">
+        <div class="footer-container">
+
+            <!-- Academics -->
+            <div class="footer-col">
+                <h3>Academics</h3>
+                <ul>
+                    <li><i class="fa-solid fa-graduation-cap"></i> MBA</li>
+                    <li><i class="fa-solid fa-graduation-cap"></i> BBA</li>
+                    <li><i class="fa-solid fa-graduation-cap"></i> B. VOC</li>
+                    <li><i class="fa-solid fa-graduation-cap"></i> Doctoral / Ph.D Program</li>
+                    <li><i class="fa-solid fa-building-columns"></i> ABAU Study Centre</li>
+                </ul>
+            </div>
+
+            <!-- Other Pages -->
+            <div class="footer-col">
+                <h3>Other Pages</h3>
+                <ul>
+                    <li><i class="fa-solid fa-caret-right"></i> Apply Now</li>
+                    <li><i class="fa-solid fa-caret-right"></i> Fees Payment</li>
+                    <li><i class="fa-solid fa-caret-right"></i> IQAC</li>
+                    <li><i class="fa-solid fa-caret-right"></i> Student Testimonials</li>
+                    <li><i class="fa-solid fa-caret-right"></i>privacy policy</li>
+                </ul>
+            </div>
+
+            <!-- Useful Links -->
+            <div class="footer-col">
+                <h3>Useful Links</h3>
+                <ul>
+                    <li><i class="fa-solid fa-caret-right"></i> GTU Syllabus</li>
+                    <li><i class="fa-solid fa-caret-right"></i> SMJV</li>
+                    <li><i class="fa-solid fa-caret-right"></i> Important Downloads</li>
+                    <li><i class="fa-solid fa-caret-right"></i> Download Brochure</li>
+                    <li><i class="fa-solid fa-caret-right"></i> Anti-Ragging Committee</li>
+                </ul>
+            </div>
+
+            <!-- Contact -->
+            <div class="footer-col">
+                <h3>Contact us</h3>
+                <ul>
+                    <li><i class="fa-solid fa-phone"></i> +91-9924556363</li>
+                    <li><i class="fa-solid fa-envelope"></i> admission@cksvmcedu.in</li>
+                    <li><i class="fa-solid fa-location-dot"></i> Nr. Goya Gate Circle, RV Desai Rd, Pratapnagar, Vadodara, Gujarat 390004</li>
+                </ul>
+            </div>
+
+        </div>
+
+        <!-- Bottom Section -->
+        <div class="footer-bottom">
+            <p>TRANSFORM THE KNOWLEDGE INTO ACTION</p>
+
+            <div class="social-icons">
+                <i class="fab fa-facebook-f"></i>
+                <i class="fab fa-instagram"></i>
+                <i class="fab fa-x-twitter"></i>
+                <i class="fab fa-linkedin-in"></i>
+                <i class="fab fa-whatsapp"></i>
+                <i class="fab fa-youtube"></i>
+            </div>
+        </div>
+    </div>
+</footer>
+
 </body>
 </html>
