--- a/University/Pages/Privacy Policy.html
+++ b/University/Pages/Privacy Policy.html
@@ -4,8 +4,101 @@
 <meta charset="UTF-8">
 <title>Privacy Policy Generator</title>
 <link rel="stylesheet" href="Privacy Policy.css">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"/>
+    <link rel="stylesheet" href="./smallcontact.css">
+    
 </head>
 <body>
+
+
+
+        <!-- Top Bar -->
+    <div class="topbar">
+      <div class="left">
+        <span>📞 +91 9924556363</span>
+        <span>✉ admission@cksvim.edu.in</span>
+      </div>
+      <div class="right">
+        <a href="#">NIRF</a>
+        <a href="#">Print Media</a>
+        <a href="#">Training & Placement</a>
+        <a href="#">Alumni Club</a>
+        <a href="#">Events & Activities</a>
+        <a href="#">Gallery</a>
+        <a href="#">Careers @ CKSVIM</a>
+      </div>
+    </div>
+
+    <!-- Main Navbar -->
+    <nav class="navbar">
+      <!-- LOGO (Reusable) -->
+      <div class="logo">
+        <img src="../images/image/logo image.png" alt="Logo" />
+      </div>
+
+      <!-- Menu -->
+      <ul class="menu">
+        <li><a href="../home.html">Home</a></li>
+        <li><a href="./about.html">About </a></li>
+        <li><a href="./courses.html">Courses </a></li>
+        <li><a href="./contact.html">Contact</a></li>
+        <li><a href="./student.html">Student</a></li>
+      </ul>
+
+      <!-- Button -->
+      <div class="apply-btn">
+        <a href="./Apply.html">Apply Now</a>
+      </div>
+    </nav>
+
+
+
+
+
+
+
+
+     
+
+    <div class="right-contact-main-container" id="contactBar">
+      <div class="contact-side-button contact-arrow-button" id="toggleArrow">
+        <i class="fa-solid fa-arrow-right"></i>
+      </div>
+
+      <div class="d" id="d">
+        <div
+          class="contact-side-button contact-us-button" id="contactHoverButton">
+          <span>Contact Us</span>
+        </div>
+
+        <div class="contact-side-button contact-messenger-button">
+          <i class="fa-brands fa-facebook-messenger"></i>
+        </div>
+
+        <div class="contact-side-button contact-phone-button">
+          <i class="fa-solid fa-/cxphone"></i>
+        </div>
+      </div>
+    </div>
+
+    <!-- ================= CONTACT FORM ================= -->
+
+    <div class="contact-form-popup-container" id="contactForm">
+      <div class="contact-form-box">
+        <div class="contact-form-header">
+          <h2>Contact Form</h2>
+          <span class="contact-form-close" id="closeForm">&times;</span>
+        </div>
+
+        <input type="text" placeholder="Name*" required />
+        <input type="tel" placeholder="Phone*" required />
+        <input type="email" placeholder="Email*" required />
+        <textarea placeholder="Message"></textarea>
+        <button>Submit</button>
+      </div>
+    </div>
+
+    <script src="./smallcontact.js"></script>
 
 <!-- TOP INTRO SECTION -->
 <div class="top-box">
@@ -78,6 +171,77 @@
 
    
 </div>
+
+
+
+
+<footer class="footer">
+    <div class="footer-overlay">
+        <div class="footer-container">
+
+            <!-- Academics -->
+            <div class="footer-col">
+                <h3>Academics</h3>
+                <ul>
+                    <li><i class="fa-solid fa-graduation-cap"></i> MBA</li>
+                    <li><i class="fa-solid fa-graduation-cap"></i> BBA</li>
+                    <li><i class="fa-solid fa-graduation-cap"></i> B. VOC</li>
+                    <li><i class="fa-solid fa-graduation-cap"></i> Doctoral / Ph.D Program</li>
+                    <li><i class="fa-solid fa-building-columns"></i> ABAU Study Centre</li>
+                </ul>
+            </div>
+
+            <!-- Other Pages -->
+            <div class="footer-col">
+                <h3>Other Pages</h3>
+                <ul>
+                    <li><i class="fa-solid fa-caret-right"></i> Apply Now</li>
+                    <li><i class="fa-solid fa-caret-right"></i> Fees Payment</li>
+                    <li><i class="fa-solid fa-caret-right"></i> IQAC</li>
+                    <li><i class="fa-solid fa-caret-right"></i> Student Testimonials</li>
+                    <li><i class="fa-solid fa-caret-right"></i>privacy policy</li>
+                </ul>
+            </div>
+
+            <!-- Useful Links -->
+            <div class="footer-col">
+                <h3>Useful Links</h3>
+                <ul>
+                    <li><i class="fa-solid fa-caret-right"></i> GTU Syllabus</li>
+                    <li><i class="fa-solid fa-caret-right"></i> SMJV</li>
+                    <li><i class="fa-solid fa-caret-right"></i> Important Downloads</li>
+                    <li><i class="fa-solid fa-caret-right"></i> Download Brochure</li>
+                    <li><i class="fa-solid fa-caret-right"></i> Anti-Ragging Committee</li>
+                </ul>
+            </div>
+
+            <!-- Contact -->
+            <div class="footer-col">
+                <h3>Contact us</h3>
+                <ul>
+                    <li><i class="fa-solid fa-phone"></i> +91-9924556363</li>
+                    <li><i class="fa-solid fa-envelope"></i> admission@cksvmcedu.in</li>
+                    <li><i class="fa-solid fa-location-dot"></i> Nr. Goya Gate Circle, RV Desai Rd, Pratapnagar, Vadodara, Gujarat 390004</li>
+                </ul>
+            </div>
+
+        </div>
+
+        <!-- Bottom Section -->
+        <div class="footer-bottom">
+            <p>TRANSFORM THE KNOWLEDGE INTO ACTION</p>
+
+            <div class="social-icons">
+                <i class="fab fa-facebook-f"></i>
+                <i class="fab fa-instagram"></i>
+                <i class="fab fa-x-twitter"></i>
+                <i class="fab fa-linkedin-in"></i>
+                <i class="fab fa-whatsapp"></i>
+                <i class="fab fa-youtube"></i>
+            </div>
+        </div>
+    </div>
+</footer>
 
 </body>
 </html>
