--- a/University/Pages/Student.html
+++ b/University/Pages/Student.html
@@ -4,8 +4,7 @@
 <head>
     <title>Student </title>
 
-     <link rel="stylesheet"
-     href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"/>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" />
 
     <link rel="stylesheet" href="Student.css">
 </head>
@@ -14,43 +13,43 @@
 
 
 
-       <!-- Top Bar -->
+    <!-- Top Bar -->
     <div class="topbar">
-      <div class="left">
-        <span>📞 +91 9924556363</span>
-        <span>✉ admission@cksvim.edu.in</span>
-      </div>
-      <div class="right">
-        <a href="#">NIRF</a>
-        <a href="#">Print Media</a>
-        <a href="#">Training & Placement</a>
-        <a href="#">Alumni Club</a>
-        <a href="#">Events & Activities</a>
-        <a href="#">Gallery</a>
-        <a href="#">Careers @ CKSVIM</a>
-      </div>
+        <div class="left">
+            <span>📞 +91 9924556363</span>
+            <span>✉ admission@cksvim.edu.in</span>
+        </div>
+        <div class="right">
+            <a href="#">NIRF</a>
+            <a href="#">Print Media</a>
+            <a href="#">Training & Placement</a>
+            <a href="#">Alumni Club</a>
+            <a href="#">Events & Activities</a>
+            <a href="#">Gallery</a>
+            <a href="#">Careers @ CKSVIM</a>
+        </div>
     </div>
 
     <!-- Main Navbar -->
     <nav class="navbar">
-      <!-- LOGO (Reusable) -->
-      <div class="logo">
-        <img src="../images/image/logo image.png" alt="Logo" />
-      </div>
+        <!-- LOGO (Reusable) -->
+        <div class="logo">
+            <img src="../images/image/logo image.png" alt="Logo" />
+        </div>
 
-      <!-- Menu -->
-      <ul class="menu">
-        <li><a href="#">Home</a></li>
-        <li><a href="#">About </a></li>
-        <li><a href="#">Courses </a></li>
-        <li><a href="#">Contact</a></li>
-        <li><a href="#">Student</a></li>
-      </ul>
+        <!-- Menu -->
+        <ul class="menu">
+            <li><a href="#">Home</a></li>
+            <li><a href="#">About </a></li>
+            <li><a href="#">Courses </a></li>
+            <li><a href="#">Contact</a></li>
+            <li><a href="#">Student</a></li>
+        </ul>
 
-      <!-- Button -->
-      <div class="apply-btn">
-        <a href="./Apply.html">Apply Now</a>
-      </div>
+        <!-- Button -->
+        <div class="apply-btn">
+            <a href="./Apply.html">Apply Now</a>
+        </div>
     </nav>
 
 
@@ -58,25 +57,24 @@
 
     <!-- ================= CONTACT FORM ================= -->
 
-       <div class="right-contact-main-container" id="contactBar">
-      <div class="contact-side-button contact-arrow-button" id="toggleArrow">
-        <i class="fa-solid fa-arrow-right"></i>
-      </div>
-
-      <div class="d" id="d">
-        <div
-          class="contact-side-button contact-us-button" id="contactHoverButton">
-          <span>Contact Us</span>
+    <div class="right-contact-main-container" id="contactBar">
+        <div class="contact-side-button contact-arrow-button" id="toggleArrow">
+            <i class="fa-solid fa-arrow-right"></i>
         </div>
 
-        <div class="contact-side-button contact-messenger-button">
-          <i class="fa-brands fa-facebook-messenger"></i>
-        </div>
+        <div class="d" id="d">
+            <div class="contact-side-button contact-us-button" id="contactHoverButton">
+                <span>Contact Us</span>
+            </div>
 
-        <div class="contact-side-button contact-phone-button">
-          <i class="fa-solid fa-phone"></i>
+            <div class="contact-side-button contact-messenger-button">
+                <i class="fa-brands fa-facebook-messenger"></i>
+            </div>
+
+            <div class="contact-side-button contact-phone-button">
+                <i class="fa-solid fa-phone"></i>
+            </div>
         </div>
-      </div>
     </div>
 
 
@@ -84,18 +82,18 @@
 
 
     <div class="contact-form-popup-container" id="contactForm">
-      <div class="contact-form-box">
-        <div class="contact-form-header">
-          <h2>Contact Form</h2>
-          <span class="contact-form-close" id="closeForm">&times;</span>
-        </div>
+        <div class="contact-form-box">
+            <div class="contact-form-header">
+                <h2>Contact Form</h2>
+                <span class="contact-form-close" id="closeForm">&times;</span>
+            </div>
 
-        <input type="text" placeholder="Name*" required />
-        <input type="tel" placeholder="Phone*" required />
-        <input type="email" placeholder="Email*" required />
-        <textarea placeholder="Message"></textarea>
-        <button>Submit</button>
-      </div>
+            <input type="text" placeholder="Name*" required />
+            <input type="tel" placeholder="Phone*" required />
+            <input type="email" placeholder="Email*" required />
+            <textarea placeholder="Message"></textarea>
+            <button>Submit</button>
+        </div>
     </div>
 
 
@@ -125,7 +123,7 @@
         </div>
 
 
-        
+
 
         <!-- Testimonial 1 -->
         <div class="student-box">
@@ -375,79 +373,153 @@
             <div class="club-card">
                 <div class="club-icon">🎭</div>
                 <div class="club-title">Cultural Club</div>
-                <div class="club-desc">Organizing dance, music, and drama events to showcase student talent and celebrate diversity.</div>
+                <div class="club-desc">Organizing dance, music, and drama events to showcase student talent and
+                    celebrate diversity.</div>
             </div>
             <!-- Club 2 -->
             <div class="club-card">
                 <div class="club-icon">⚽</div>
                 <div class="club-title">Sports Club</div>
-                <div class="club-desc">Promoting physical fitness through inter-college tournaments, cricket, football, and indoor games.</div>
+                <div class="club-desc">Promoting physical fitness through inter-college tournaments, cricket, football,
+                    and indoor games.</div>
             </div>
             <!-- Club 3 -->
             <div class="club-card">
                 <div class="club-icon">💻</div>
                 <div class="club-title">Tech & Innovation</div>
-                <div class="club-desc">A hub for coding, hackathons, and workshops on the latest technologies and startups.</div>
+                <div class="club-desc">A hub for coding, hackathons, and workshops on the latest technologies and
+                    startups.</div>
             </div>
-    </div>
-
-  <script>
-    // Simple slider functionality
-    const sliderWrapper = document.querySelector('.slider-wrapper');
-    const sliderImages = document.querySelectorAll('.slider-image');
-    let currentIndex = 0;
-
-    function showSlide(index) {
-        sliderWrapper.style.transform = `translateX(-${index * 100}%)`;
-    }
-
-    setInterval(() => {
-        currentIndex = (currentIndex + 1) % sliderImages.length;
-        showSlide(currentIndex);
-    }, 3000); // Change slide every 3 seconds
+        </div>
+        </div>
 
 
+        <div class="footer">
+            <div class="footer-overlay">
+                <div class="footer-container">
+
+                    <!-- Academics -->
+                    <div class="footer-col">
+                        <h3>Academics</h3>
+                        <ul>
+                            <li><i class="fa-solid fa-graduation-cap"></i> MBA</li>
+                            <li><i class="fa-solid fa-graduation-cap"></i> BBA</li>
+                            <li><i class="fa-solid fa-graduation-cap"></i> B. VOC</li>
+                            <li><i class="fa-solid fa-graduation-cap"></i> Doctoral / Ph.D Program</li>
+                            <li><i class="fa-solid fa-building-columns"></i> ABAU Study Centre</li>
+                        </ul>
+                    </div>
+
+                    <!-- Other Pages -->
+                    <div class="footer-col">
+                        <h3>Other Pages</h3>
+                        <ul>
+                            <li><i class="fa-solid fa-caret-right"></i> Apply Now</li>
+                            <li><i class="fa-solid fa-caret-right"></i> Fees Payment</li>
+                            <li><i class="fa-solid fa-caret-right"></i> IQAC</li>
+                            <li><i class="fa-solid fa-caret-right"></i> Student Testimonials</li>
+                            <li><i class="fa-solid fa-caret-right"></i>privacy policy</li>
+                        </ul>
+                    </div>
+
+                    <!-- Useful Links -->
+                    <div class="footer-col">
+                        <h3>Useful Links</h3>
+                        <ul>
+                            <li><i class="fa-solid fa-caret-right"></i> GTU Syllabus</li>
+                            <li><i class="fa-solid fa-caret-right"></i> SMJV</li>
+                            <li><i class="fa-solid fa-caret-right"></i> Important Downloads</li>
+                            <li><i class="fa-solid fa-caret-right"></i> Download Brochure</li>
+                            <li><i class="fa-solid fa-caret-right"></i> Anti-Ragging Committee</li>
+                        </ul>
+                    </div>
+
+                    <!-- Contact -->
+                    <div class="footer-col">
+                        <h3>Contact us</h3>
+                        <ul>
+                            <li><i class="fa-solid fa-phone"></i> +91-9924556363</li>
+                            <li><i class="fa-solid fa-envelope"></i> admission@cksvmcedu.in</li>
+                            <li><i class="fa-solid fa-location-dot"></i> Nr. Goya Gate Circle, RV Desai Rd, Pratapnagar,
+                                Vadodara, Gujarat 390004</li>
+                        </ul>
+                    </div>
+
+                </div>
+
+                <!-- Bottom Section -->
+                <div class="footer-bottom">
+                    <p>TRANSFORM THE KNOWLEDGE INTO ACTION</p>
+
+                    <div class="social-icons">
+                        <i class="fab fa-facebook-f"></i>
+                        <i class="fab fa-instagram"></i>
+                        <i class="fab fa-x-twitter"></i>
+                        <i class="fab fa-linkedin-in"></i>
+                        <i class="fab fa-whatsapp"></i>
+                        <i class="fab fa-youtube"></i>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <script>
+            // Simple slider functionality
+            const sliderWrapper = document.querySelector('.slider-wrapper');
+            const sliderImages = document.querySelectorAll('.slider-image');
+            let currentIndex = 0;
+
+            function showSlide(index) {
+                sliderWrapper.style.transform = `translateX(-${index * 100}%)`;
+            }
+
+            setInterval(() => {
+                currentIndex = (currentIndex + 1) % sliderImages.length;
+                showSlide(currentIndex);
+            }, 3000); // Change slide every 3 seconds
 
 
-    // side contect form
-      const contactHoverButton = document.getElementById("contactHoverButton");
-      const contactForm = document.getElementById("contactForm");
-      const closeForm = document.getElementById("closeForm");
 
-      contactHoverButton.addEventListener("mouseenter", () => {
-        contactForm.classList.add("active");
-      });
 
-      contactForm.addEventListener("mouseleave", () => {
-        contactForm.classList.remove("active");
-      });
+            // side contect form
+            const contactHoverButton = document.getElementById("contactHoverButton");
+            const contactForm = document.getElementById("contactForm");
+            const closeForm = document.getElementById("closeForm");
 
-      closeForm.addEventListener("click", () => {
-        contactForm.classList.remove("active");
-      });
-      document.addEventListener("DOMContentLoaded", function () {
-        const toggleArrow = document.getElementById("toggleArrow");
-        const contactBar = document.getElementById("contactBar");
+            contactHoverButton.addEventListener("mouseenter", () => {
+                contactForm.classList.add("active");
+            });
 
-        toggleArrow.addEventListener("click", function () {
-          contactBar.classList.toggle("expanded");
+            contactForm.addEventListener("mouseleave", () => {
+                contactForm.classList.remove("active");
+            });
 
-          const icon = toggleArrow.querySelector("i");
+            closeForm.addEventListener("click", () => {
+                contactForm.classList.remove("active");
+            });
+            document.addEventListener("DOMContentLoaded", function () {
+                const toggleArrow = document.getElementById("toggleArrow");
+                const contactBar = document.getElementById("contactBar");
 
-          if (contactBar.classList.contains("expanded")) {
-            icon.classList.remove("fa-arrow-right");
-            icon.classList.add("fa-arrow-left");
-            d.style.display = "none";
-            contactBar.style.top = "50%";
-          } else {
-            icon.classList.remove("fa-arrow-left");
-            icon.classList.add("fa-arrow-right");
-            d.style.display = "block";
-            contactBar.style.top = "30%";
-          }
-        });
-      });
-  </script>
+                toggleArrow.addEventListener("click", function () {
+                    contactBar.classList.toggle("expanded");
+
+                    const icon = toggleArrow.querySelector("i");
+
+                    if (contactBar.classList.contains("expanded")) {
+                        icon.classList.remove("fa-arrow-right");
+                        icon.classList.add("fa-arrow-left");
+                        d.style.display = "none";
+                        contactBar.style.top = "50%";
+                    } else {
+                        icon.classList.remove("fa-arrow-left");
+                        icon.classList.add("fa-arrow-right");
+                        d.style.display = "block";
+                        contactBar.style.top = "30%";
+                    }
+                });
+            });
+        </script>
 </body>
 
 </html>
