--- a/University/Pages/Privacy Policy.html
+++ b/University/Pages/Privacy Policy.html
@@ -4,7 +4,11 @@
 <meta charset="UTF-8">
 <title>Privacy Policy Generator</title>
 <link rel="stylesheet" href="Privacy Policy.css">
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"/>
+<link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
+    />
+    <link rel="stylesheet" href="./navbar.css">
     <link rel="stylesheet" href="./smallcontact.css">
     
 </head>
@@ -38,11 +42,11 @@
 
       <!-- Menu -->
       <ul class="menu">
-        <li><a href="../home.html">Home</a></li>
-        <li><a href="./about.html">About </a></li>
-        <li><a href="./courses.html">Courses </a></li>
-        <li><a href="./contact.html">Contact</a></li>
-        <li><a href="./student.html">Student</a></li>
+        <li><a href="../index.html">Home</a></li>
+        <li><a href="./About.html">About </a></li>
+        <li><a href="./Courses.html">Courses </a></li>
+        <li><a href="./Conatct.html">Contact</a></li>
+        <li><a href="./Student.html">Student</a></li>
       </ul>
 
       <!-- Button -->
