--- a/University/index.html
+++ b/University/index.html
@@ -37,11 +37,11 @@
 
       <!-- Menu -->
       <ul class="menu">
-        <li><a href="#">Home</a></li>
-        <li><a href="#">About </a></li>
-        <li><a href="#">Courses </a></li>
-        <li><a href="#">Contact</a></li>
-        <li><a href="#">Student</a></li>
+        <li><a href="./index.html">Home</a></li>
+        <li><a href="./Pages/about.html">About </a></li>
+        <li><a href="./Pages/courses.html">Courses </a></li>
+        <li><a href="./Pages/contact.html">Contact</a></li>
+        <li><a href="./Pages/student.html">Student</a></li>
       </ul>
 
       <!-- Button -->
@@ -339,7 +339,7 @@
                     <li><i class="fa-solid fa-caret-right"></i> Fees Payment</li>
                     <li><i class="fa-solid fa-caret-right"></i> IQAC</li>
                     <li><i class="fa-solid fa-caret-right"></i> Student Testimonials</li>
-                    <li><i class="fa-solid fa-caret-right"></i>privacy policy</li>
+                    <li> <a href="./Pages/Privacy Policy.html"><i class="fa-solid fa-caret-right"></i>privacypolicy</a></li>
                 </ul>
             </div>
 
