--- a/University/Pages/About.html
+++ b/University/Pages/About.html
@@ -36,16 +36,16 @@
 
         <!-- Menu -->
         <ul class="menu">
-            <li><a href="./home.html">Home</a></li>
-            <li><a href="./about.html">About </a></li>
-            <li><a href="./courses.html">Courses </a></li>
-            <li><a href="./contact.html">Contact</a></li>
-            <li><a href="./student.html">Student</a></li>
+            <li><a href="../index.html">Home</a></li>
+            <li><a href="./About.html">About </a></li>
+            <li><a href="./Courses.html">Courses </a></li>
+            <li><a href="./Contact.html">Contact</a></li>
+            <li><a href="./Student.html">Student</a></li>
         </ul>
 
         <!-- Button -->
         <div class="apply-btn">
-            <a href="#">Apply Now</a>
+            <a href="./Apply.html">Apply Now</a>
         </div>
     </nav>
 
@@ -305,7 +305,7 @@
                     <li><i class="fa-solid fa-caret-right"></i> Fees Payment</li>
                     <li><i class="fa-solid fa-caret-right"></i> IQAC</li>
                     <li><i class="fa-solid fa-caret-right"></i> Student Testimonials</li>
-                    <li><i class="fa-solid fa-caret-right"></i>privacy policy</li>
+                    <li> <a href="./Privacy Policy.html"><i class="fa-solid fa-caret-right"></i>privacy policy</li>
                 </ul>
             </div>
 
