--- a/University/Pages/Student.html
+++ b/University/Pages/Student.html
@@ -39,11 +39,11 @@
 
         <!-- Menu -->
         <ul class="menu">
-            <li><a href="#">Home</a></li>
-            <li><a href="#">About </a></li>
-            <li><a href="#">Courses </a></li>
-            <li><a href="#">Contact</a></li>
-            <li><a href="#">Student</a></li>
+            <li><a href="../index.html">Home</a></li>
+            <li><a href="./About.html">About </a></li>
+            <li><a href="./Courses.html">Courses </a></li>
+            <li><a href="./Contact.html">Contact</a></li>
+            <li><a href="./Student.html">Student</a></li>
         </ul>
 
         <!-- Button -->
@@ -418,7 +418,7 @@
                             <li><i class="fa-solid fa-caret-right"></i> Fees Payment</li>
                             <li><i class="fa-solid fa-caret-right"></i> IQAC</li>
                             <li><i class="fa-solid fa-caret-right"></i> Student Testimonials</li>
-                            <li><i class="fa-solid fa-caret-right"></i>privacy policy</li>
+                            <li> <a href="./Privacy Policy.html"><i class="fa-solid fa-caret-right"></i>privacy policy</a></li>
                         </ul>
                     </div>
 
