--- a/University/Pages/Student.html
+++ b/University/Pages/Student.html
@@ -3,10 +3,12 @@
 
 <head>
     <title>Student </title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" />
 
     <link rel="stylesheet" href="Student.css">
+  
 </head>
 
 <body>
@@ -37,6 +39,10 @@
             <img src="../images/image/logo image.png" alt="Logo" />
         </div>
 
+        <div class="hamburger">
+            <i class="fa-solid fa-bars"></i>
+        </div>
+
         <!-- Menu -->
         <ul class="menu">
             <li><a href="../index.html">Home</a></li>
@@ -44,6 +50,7 @@
             <li><a href="./Courses.html">Courses </a></li>
             <li><a href="./Contact.html">Contact</a></li>
             <li><a href="./Student.html">Student</a></li>
+            <li class="apply-btn-mobile"><a href="./Apply.html">Apply Now</a></li>
         </ul>
 
         <!-- Button -->
@@ -477,6 +484,14 @@
                 currentIndex = (currentIndex + 1) % sliderImages.length;
                 showSlide(currentIndex);
             }, 3000); // Change slide every 3 seconds
+
+            // Hamburger menu
+            const hamburger = document.querySelector(".hamburger");
+            const menu = document.querySelector(".menu");
+
+            hamburger.addEventListener("click", () => {
+                menu.classList.toggle("active");
+            });
 
 
 
