--- a/University/Pages/About.html
+++ b/University/Pages/About.html
@@ -82,6 +82,7 @@
 
         <div class="contact-side-button contact-phone-button">
           <i class="fa-solid fa-/cxphone"></i>
+          <i class="fa-solid fa-phone"></i>
         </div>
       </div>
     </div>
@@ -320,6 +321,7 @@
                     <li><i class="fa-solid fa-caret-right"></i> IQAC</li>
                     <li><i class="fa-solid fa-caret-right"></i> Student Testimonials</li>
                     <li> <a href="./Privacy Policy.html"><i class="fa-solid fa-caret-right"></i>privacy policy</li>
+                    <li><a href="./Privacy Policy.html"><i class="fa-solid fa-caret-right"></i>Privacy Policy</a></li>
                 </ul>
             </div>
 
