--- a/University/Pages/Apply.html
+++ b/University/Pages/Apply.html
@@ -179,6 +179,7 @@
                     <li><i class="fa-solid fa-caret-right"></i> IQAC</li>
                     <li><i class="fa-solid fa-caret-right"></i> Student Testimonials</li>
                     <li><i class="fa-solid fa-caret-right"></i>privacy policy</li>
+                    <li><a href="./Privacy Policy.html"><i class="fa-solid fa-caret-right"></i>Privacy Policy</a></li>
                 </ul>
             </div>
 
