--- a/University/Pages/Courses.html
+++ b/University/Pages/Courses.html
@@ -14,7 +14,6 @@
 </head>
 
 <body>
-    
        <!-- Top Bar -->
     <div class="topbar">
       <div class="left">
@@ -39,13 +38,18 @@
         <img src="../images/image/logo image.png" alt="Logo" />
       </div>
 
+      <div class="hamburger">
+        <i class="fa-solid fa-bars"></i>
+      </div>
+
       <!-- Menu -->
       <ul class="menu">
         <li><a href="../index.html">Home</a></li>
-        <li><a href="./About.html">About </a></li>
-        <li><a href="./Courses.html">Courses </a></li>
-        <li><a href="./Contact.html">Contact</a></li>
-        <li><a href="./Student.html">Student</a></li>
+        <li><a href="./about.html">About </a></li>
+        <li><a href="./courses.html">Courses </a></li>
+        <li><a href="./contact.html">Contact</a></li>
+        <li><a href="./student.html">Student</a></li>
+        <li class="apply-btn-mobile"><a href="./Apply.html">Apply Now</a></li>
       </ul>
 
       <!-- Button -->
@@ -53,9 +57,6 @@
         <a href="./Apply.html">Apply Now</a>
       </div>
     </nav>
-
-
-
 
 
 
@@ -80,6 +81,7 @@
 
         <div class="contact-side-button contact-phone-button">
           <i class="fa-solid fa-/cxphone"></i>
+          <i class="fa-solid fa-phone"></i>
         </div>
       </div>
     </div>
