--- a/University/Pages/Privacy Policy.html
+++ b/University/Pages/Privacy Policy.html
@@ -16,7 +16,7 @@
 
 
 
-        <!-- Top Bar -->
+       <!-- Top Bar -->
     <div class="topbar">
       <div class="left">
         <span>📞 +91 9924556363</span>
@@ -40,13 +40,18 @@
         <img src="../images/image/logo image.png" alt="Logo" />
       </div>
 
+      <div class="hamburger">
+        <i class="fa-solid fa-bars"></i>
+      </div>
+
       <!-- Menu -->
       <ul class="menu">
         <li><a href="../index.html">Home</a></li>
-        <li><a href="./About.html">About </a></li>
-        <li><a href="./Courses.html">Courses </a></li>
-        <li><a href="./Conatct.html">Contact</a></li>
-        <li><a href="./Student.html">Student</a></li>
+        <li><a href="./about.html">About </a></li>
+        <li><a href="./courses.html">Courses </a></li>
+        <li><a href="./contact.html">Contact</a></li>
+        <li><a href="./student.html">Student</a></li>
+        <li class="apply-btn-mobile"><a href="./Apply.html">Apply Now</a></li>
       </ul>
 
       <!-- Button -->
@@ -54,6 +59,8 @@
         <a href="./Apply.html">Apply Now</a>
       </div>
     </nav>
+
+
 
 
 
@@ -80,7 +87,7 @@
         </div>
 
         <div class="contact-side-button contact-phone-button">
-          <i class="fa-solid fa-/cxphone"></i>
+          <i class="fa-solid fa-phone"></i>
         </div>
       </div>
     </div>
@@ -203,7 +210,7 @@
                     <li><i class="fa-solid fa-caret-right"></i> Fees Payment</li>
                     <li><i class="fa-solid fa-caret-right"></i> IQAC</li>
                     <li><i class="fa-solid fa-caret-right"></i> Student Testimonials</li>
-                    <li><i class="fa-solid fa-caret-right"></i>privacy policy</li>
+                    <li><a href="./Privacy Policy.html"><i class="fa-solid fa-caret-right"></i>Privacy Policy</a></li>
                 </ul>
             </div>
 
