--- a/University/Pages/Conatct.html
+++ b/University/Pages/Conatct.html
@@ -177,6 +177,7 @@
                     <li><i class="fa-solid fa-caret-right"></i> IQAC</li>
                     <li><i class="fa-solid fa-caret-right"></i> Student Testimonials</li>
                     <li> <a href="./Privacy Policy.html"><i class="fa-solid fa-caret-right"></i>privacy policy</li>
+                    <li><a href="./Privacy Policy.html"><i class="fa-solid fa-caret-right"></i>Privacy Policy</a></li>
                 </ul>
             </div>
 
