--- a/University/Pages/Apply.html
+++ b/University/Pages/Apply.html
@@ -43,7 +43,7 @@
       <li><a href="../home.html">Home</a></li>
       <li><a href="./about.html">About </a></li>
       <li><a href="./courses.html">Courses </a></li>
-      <li><a href="./contact.html">Contact</a></li>
+      <li><a href="./Conatct.html">Conatct</a></li>
       <li><a href="./student.html">Student</a></li>
     </ul>
 
