--- a/University/Pages/Conatct.html
+++ b/University/Pages/Conatct.html
@@ -36,11 +36,11 @@
 
       <!-- Menu -->
       <ul class="menu">
-        <li><a href="../home.html">Home</a></li>
+        <li><a href="../index.html">Home</a></li>
         <li><a href="./About.html">About </a></li>
         <li><a href="./Courses.html">Courses </a></li>
-        <li><a href="./contact.html">Contact</a></li>
-        <li><a href="./student.html">Student</a></li>
+        <li><a href="./Conatct.html">Conatct</a></li>
+        <li><a href="./Student.html">Student</a></li>
       </ul>
 
       <!-- Button -->
