--- a/University/Pages/navbar.html
+++ b/University/Pages/navbar.html
@@ -47,7 +47,7 @@
         <li><a href="../index.html">Home</a></li>
         <li><a href="./about.html">About </a></li>
         <li><a href="./courses.html">Courses </a></li>
-        <li><a href="./contact.html">Contact</a></li>
+        <li><a href="./contact.html">Conatct</a></li>
         <li><a href="./student.html">Student</a></li>
         <li class="apply-btn-mobile"><a href="./Apply.html">Apply Now</a></li>
       </ul>
