--- a/University/index.html
+++ b/University/index.html
@@ -42,10 +42,10 @@
       <!-- Menu -->
       <ul class="menu">
         <li><a href="./index.html">Home</a></li>
-        <li><a href="./Pages/about.html">About </a></li>
-        <li><a href="./Pages/courses.html">Courses </a></li>
-        <li><a href="./Pages/contact.html">Contact</a></li>
-        <li><a href="./Pages/student.html">Student</a></li>
+        <li><a href="./Pages/About.html">About </a></li>
+        <li><a href="./Pages/Courses.html">Courses </a></li>
+        <li><a href="./Pages/Conatct.html">Conatct</a></li>
+        <li><a href="./Pages/Student.html">Student</a></li>
         <li class="apply-btn-mobile"><a href="./Pages/Apply.html">Apply Now</a></li>
       </ul>
 
